--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@solana/wallet-adapter-react-ui": "^0.9.34",
     "@solana/wallet-adapter-wallets": "^0.19.25",
     "@solana/web3.js": "^1.89.1",
+    "bn.js": "^5.2.1",
     "next": "14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/bn.js": "^5.1.5",
     "@types/node": "20.11.4",
     "@types/react": "18.2.48",
     "@types/react-dom": "^18",
